--- a/app/templates/presentationContainer.mustache
+++ b/app/templates/presentationContainer.mustache
@@ -11,11 +11,11 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-	<link rel="stylesheet" href="/reveal.js/css/reveal.css">
-	<link rel="stylesheet" href="/reveal.js/css/theme/{{theme}}.css" id="theme">
+	<link rel="stylesheet" href="/resources/reveal.js/css/reveal.css">
+	<link rel="stylesheet" href="/themes/{{theme}}.css" id="theme">
 
 	<!-- Code syntax highlighting -->
-	<link rel="stylesheet" href="/highlight.js/src/styles/{{highlight}}.css">
+	<link rel="stylesheet" href="/styles/{{style}}.css" id="style">
 
 	<style>
 		html,
@@ -125,7 +125,7 @@
 	</style>
 
 	<!--[if lt IE 9]>
-		<script src="/reveal.js/lib/js/html5shiv.js"></script>
+		<script src="/resources/reveal.js/lib/js/html5shiv.js"></script>
 		<![endif]-->
 </head>
 
@@ -135,19 +135,19 @@
 
 		<!-- Any section element inside of this container is displayed as a slide -->
 		<div class="slides">
-			{{{slides}}}
+{{{slides}}}
 		</div>
 
 	</div>
 
-	<script src="/reveal.js/lib/js/head.min.js"></script>
-	<script src="/reveal.js/js/reveal.js"></script>
+	<script src="/resources/reveal.js/lib/js/head.min.js"></script>
+	<script src="/resources/reveal.js/js/reveal.js"></script>
 
 	<script>
 			// Full list of configuration options available at:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: false,
+				controls: {{controls}},
 				progress: true,
 				history: true,
 				center: true,
@@ -156,14 +156,26 @@
 
 				// Optional reveal.js plugins
 				dependencies: [
-					{ src: '/reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
-					{ src: '/reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-					{ src: '/reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-					{ src: '/highlight.js/src/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
-					{ src: '/reveal.js/plugin/zoom-js/zoom.js', async: true },
-					{ src: '/reveal.js/plugin/notes/notes.js', async: true }
+					{ src: '/resources/reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
+					{ src: '/resources/reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+					{ src: '/resources/reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+					{ src: '/resources/reveal.js/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
+					{ src: '/resources/reveal.js/plugin/zoom-js/zoom.js', async: true },
+					{ src: '/resources/reveal.js/plugin/notes/notes.js', async: true }
 				]
 			});
+	</script>
+
+	<script>
+	
+		window.updateTheme = function(theme) {
+			document.getElementById('theme').setAttribute('href','/themes/' + theme + '.css');
+		};
+
+		window.updateStyle = function(style) {
+			document.getElementById('style').setAttribute('href','/styles/' + style + '.css');
+		};
+
 	</script>
 
 </body>
