--- a/app/templates/configurationContainer.mustache
+++ b/app/templates/configurationContainer.mustache
@@ -15,28 +15,25 @@
 	<link rel="stylesheet" href="/themes/{{theme}}.css" id="theme">
 
 	<style>
-	.note {
-		padding: 10px 20%;
-		text-align: center;
-		font-family: "Open Sans", sans-serif;
-		font-size: 80%;
-		font-weight: normal;
-		color: #eee;
-	}
+		.reveal p.note {
+			text-align: center;
+			font-family: "Open Sans", sans-serif;
+			font-size: 40%;
+			font-weight: normal;
+			color: #eee;
+		}
 	</style>
 
 </head>
 
-<body><p class="note">Use your left/right arrows to switch between different themes and the up/down arrows to select different code highlight styles</p>
+<body>
 	
-
 	<div class="reveal">
 		<div class="slides">
-{{{slides}}}
+			{{{slides}}}
 		</div>
 	</div>
 
-	
 	<script src="/resources/reveal.js/lib/js/head.min.js"></script>
 	<script src="/resources/reveal.js/js/reveal.js"></script>
 
@@ -54,11 +51,10 @@
 	</script>
 
 	<script>
+		(function () {
 
-		(function() {
-
-			let currentTheme = 0;
-			let currentStyle = 0;
+			let currentTheme = null;
+			let currentStyle = null
 			let themes = [];
 			let styles = [];
 
@@ -73,40 +69,53 @@
 				};
 			}
 
-			requestResource('/config/themes', arr => {
+			requestResource('/api/themes', arr => {
 				themes = arr;
 			});
-			requestResource('/config/styles', arr => {
+			requestResource('/api/styles', arr => {
 				styles = arr;
 			});
 
-			document.onkeydown = function(e) {
+			document.onkeydown = function (e) {
 
 				e = e || window.event;
 
-				if (e.keyCode == '38') {
-					currentTheme++;
-				} else if (e.keyCode == '40') {
-					currentTheme--;
-				} else if (e.keyCode == '37') {
-					currentStyle++;
-				} else if (e.keyCode == '39') {
-					currentStyle--;
-				}
+				const LEFT = 37;
+				const RIGHT = 39;
+				const UP = 38;
+				const DOWN = 40;
 
-				if (currentTheme >= themes.length) {
+				if (Number.isInteger(currentTheme)) {
+					if (e.keyCode == RIGHT) {
+						currentTheme++;
+					} else if (e.keyCode == LEFT) {
+						currentTheme--;
+					}
+					if (currentTheme >= themes.length) {
+						currentTheme = 0;
+					} else if (currentTheme < 0) {
+						currentTheme = themes.length - 1;
+					}
+				} else if (e.keyCode == LEFT || e.keyCode == RIGHT) {
 					currentTheme = 0;
-				} else if (currentTheme < 0) {
-					currentTheme = themes.length - 1;
 				}
 
-				if (currentStyle >= styles.length) {
+				if (Number.isInteger(currentStyle)) {
+					if (e.keyCode == UP) {
+						currentStyle++;
+					} else if (e.keyCode == DOWN) {
+						currentStyle--;
+					}
+					if (currentStyle >= styles.length) {
+						currentStyle = 0;
+					} else if (currentStyle < 0) {
+						currentStyle = styles.length - 1;
+					}
+				} else if (e.keyCode == UP || e.keyCode == DOWN) {
 					currentStyle = 0;
-				} else if (currentStyle < 0) {
-					currentStyle = styles.length - 1;
 				}
 
-				if (e.keyCode == '37' || e.keyCode == '38' || e.keyCode == '39' || e.keyCode == '40') {
+				if (e.keyCode == LEFT || e.keyCode == RIGHT || e.keyCode == UP || e.keyCode == DOWN) {
 
 					let iframes = Array.from(document.getElementsByTagName("iframe")).map(iframe => iframe.contentWindow);
 					let visibleiFrameIdx = Reveal.getProgress();
@@ -114,12 +123,19 @@
 					let currentProgress = iframes[visibleiFrameIdx].Reveal.getProgress();
 
 					iframes.forEach(iframe => {
+
+						let chosenTheme = themes[currentTheme] ? themes[currentTheme] : "{{theme}}";
+						let chosenStyle = styles[currentStyle] ? styles[currentStyle] : "{{style}}";
+
+						console.info("chosenTheme", chosenTheme);
+						console.info("chosenStyle", chosenStyle);
+
 						iframe.Reveal.slide(currentIndices.h, currentIndices.v, currentIndices);
-						iframe.updateTheme(themes[currentTheme]);
-						iframe.updateStyle(styles[currentStyle]);
+						iframe.updateTheme(chosenTheme);
+						iframe.updateStyle(chosenStyle);
 
 						Array.from(document.getElementsByClassName("open")).map(anchor => {
-							anchor.href = "/presentations/{{id}}?theme=" + themes[currentTheme] + "&style=" + styles[currentStyle];
+							anchor.href = "/presentations/{{id}}?theme=" + chosenTheme + "&style=" + chosenStyle;
 						});
 					});
 
@@ -129,9 +145,6 @@
 			}
 
 		})();
-
-	
-
 	</script>
 
 </body>
