--- a/app/templates/presentationContainer.mustache
+++ b/app/templates/presentationContainer.mustache
@@ -126,7 +126,7 @@
 
 	<!--[if lt IE 9]>
 		<script src="/resources/reveal.js/lib/js/html5shiv.js"></script>
-		<![endif]-->
+	<![endif]-->
 </head>
 
 <body>
@@ -148,6 +148,7 @@
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				controls: {{controls}},
+				loop: {{loop}},
 				progress: true,
 				history: true,
 				center: true,
