--- a/app/templates/presentationContainer.mustache
+++ b/app/templates/presentationContainer.mustache
@@ -18,108 +18,43 @@
 	<link rel="stylesheet" href="/styles/{{style}}.css" id="style">
 
 	<style>
-		html,
-		body,
-		.reveal div,
-		.reveal span,
-		.reveal applet,
-		.reveal object,
-		.reveal iframe,
-		/* .reveal h1,
-		.reveal h2,
-		.reveal h3,
-		.reveal h4,
-		.reveal h5,
-		.reveal h6, */
-		.reveal p,
-		.reveal blockquote,
-		.reveal pre,
-		.reveal a,
-		.reveal abbr,
-		.reveal acronym,
-		.reveal address,
-		.reveal big,
-		.reveal cite,
-		.reveal code,
-		.reveal del,
-		.reveal dfn,
-		.reveal em,
-		.reveal img,
-		.reveal ins,
-		.reveal kbd,
-		.reveal q,
-		.reveal s,
-		.reveal samp,
-		.reveal small,
-		.reveal strike,
-		.reveal strong,
-		.reveal sub,
-		.reveal sup,
-		.reveal tt,
-		.reveal var,
-		.reveal b,
-		.reveal u,
-		.reveal center,
-		.reveal dl,
-		.reveal dt,
-		.reveal dd,
-		.reveal ol,
-		.reveal ul,
-		.reveal li,
-		.reveal fieldset,
-		.reveal form,
-		.reveal label,
-		.reveal legend,
-		.reveal table,
-		.reveal caption,
-		.reveal tbody,
-		.reveal tfoot,
-		.reveal thead,
-		.reveal tr,
-		.reveal th,
-		.reveal td,
-		.reveal article,
-		.reveal aside,
-		.reveal canvas,
-		.reveal details,
-		.reveal embed,
-		.reveal figure,
-		.reveal figcaption,
-		.reveal footer,
-		.reveal header,
-		.reveal hgroup,
-		.reveal menu,
-		.reveal nav,
-		.reveal output,
-		.reveal ruby,
-		.reveal section,
-		.reveal summary,
-		.reveal time,
-		.reveal mark,
-		.reveal audio,
-		.reveal video {
+		html, body,
+		.reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe, .reveal p, .reveal blockquote,
+		.reveal pre, .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite,
+		.reveal code, .reveal del, .reveal dfn, .reveal em, .reveal img, .reveal ins, .reveal kbd, .reveal q,
+		.reveal s, .reveal samp, .reveal small, .reveal strike, .reveal strong, .reveal sub, .reveal sup,
+		.reveal tt, .reveal var, .reveal b, .reveal u, .reveal center, .reveal dl, .reveal dt, .reveal dd,
+		.reveal ol, .reveal ul, .reveal li, .reveal fieldset, .reveal form, .reveal label, .reveal legend,
+		.reveal table, .reveal caption, .reveal tbody, .reveal tfoot, .reveal thead, .reveal tr, .reveal th,
+		.reveal td, .reveal article, .reveal aside, .reveal canvas, .reveal details, .reveal embed, .reveal figure,
+		.reveal figcaption, .reveal footer, .reveal header, .reveal hgroup, .reveal menu, .reveal nav, .reveal output,
+		.reveal ruby, .reveal section, .reveal summary, .reveal time, .reveal mark, .reveal audio, .reveal video {
 			font-size: 0.8em !important;
 		}
+
 		.reveal pre code {
 			max-height: none !important;
 			font-size: 0.9em !important;
 			margin: 0;
 			padding: 0;
 			border: 0;
-			/* font-size: 0.7em !important; */
 			font: inherit;
 			vertical-align: baseline;
 			padding-bottom: 25px;
 		}
+
 		.reveal pre {
 			box-shadow: none;
 			margin: 0;
 		}
+
 		.hljs {
 			background: none;
 			margin-bottom: 25px;
 		}
-		.reveal .slides > section, .reveal .slides > section > section {
+
+		.reveal .slides>section,
+		.reveal .slides>section>section {
 			padding: 0;
 		}
 	</style>
@@ -127,6 +62,7 @@
 	<!--[if lt IE 9]>
 		<script src="/resources/reveal.js/lib/js/html5shiv.js"></script>
 	<![endif]-->
+
 </head>
 
 <body>
@@ -135,7 +71,7 @@
 
 		<!-- Any section element inside of this container is displayed as a slide -->
 		<div class="slides">
-{{{slides}}}
+			{{{slides}}}
 		</div>
 
 	</div>
@@ -144,37 +80,52 @@
 	<script src="/resources/reveal.js/js/reveal.js"></script>
 
 	<script>
-			// Full list of configuration options available at:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: {{controls}},
-				loop: {{loop}},
-				progress: true,
-				history: true,
-				center: true,
-				zoom: 0.5,
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+		// Full list of configuration options available at:
+		// https://github.com/hakimel/reveal.js#configuration
+		Reveal.initialize({
+			controls: {{controls}},
+			loop: {{loop }},
+			progress: true,
+			history: true,
+			center: true,
+			zoom: 0.5,
+			transition: 'slide', // none/fade/slide/convex/concave/zoom
 
-				// Optional reveal.js plugins
-				dependencies: [
-					{ src: '/resources/reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
-					{ src: '/resources/reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-					{ src: '/resources/reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-					{ src: '/resources/reveal.js/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
-					{ src: '/resources/reveal.js/plugin/zoom-js/zoom.js', async: true },
-					{ src: '/resources/reveal.js/plugin/notes/notes.js', async: true }
-				]
+			// Optional reveal.js plugins
+			dependencies: [
+				{ src: '/resources/reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
+				{ src: '/resources/reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+				{ src: '/resources/reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+				{ src: '/resources/reveal.js/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
+				{ src: '/resources/reveal.js/plugin/zoom-js/zoom.js', async: true },
+				{ src: '/resources/reveal.js/plugin/notes/notes.js', async: true }
+			]
 			});
 	</script>
 
 	<script>
-	
-		window.updateTheme = function(theme) {
-			document.getElementById('theme').setAttribute('href','/themes/' + theme + '.css');
+
+		window.updateTheme = function (theme) {
+			document.getElementById('theme').setAttribute('href', '/themes/' + theme + '.css');
 		};
 
-		window.updateStyle = function(style) {
-			document.getElementById('style').setAttribute('href','/styles/' + style + '.css');
+		window.updateStyle = function (style) {
+			document.getElementById('style').setAttribute('href', '/styles/' + style + '.css');
+		};
+
+		window.disableArrowKeys = function () {
+			document.onkeydown = function (e) {
+				var keys = [37, 38, 39, 40];
+				e = e || window.event;
+				if (keys.indexOf(e.which) > -1) {
+					e.preventDefault();
+					e.stopPropagation();
+				};
+
+				var event = document.createEvent("CustomEvent");
+				event.initCustomEvent("iFrameKeyPress", true, true, {keyCode: e.which});
+				parent.document.dispatchEvent(event);
+			};
 		};
 
 	</script>
