--- a/templates/configurationContainer.mustache
+++ b/templates/configurationContainer.mustache
@@ -11,7 +11,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-	<link rel="stylesheet" href="/resources/reveal.js/css/reveal.css">
+	<link rel="stylesheet" href="/resources/css/reveal.css">
 	<link rel="stylesheet" href="/themes/{{theme}}.css" id="theme">
 
 	<style>
@@ -33,8 +33,8 @@
 		</div>
 	</div>
 
-	<script src="/resources/reveal.js/lib/js/head.min.js"></script>
-	<script src="/resources/reveal.js/js/reveal.js"></script>
+	<script src="/resources/lib/js/head.min.js"></script>
+	<script src="/resources/js/reveal.js"></script>
 
 	<script>
 		Reveal.initialize({
