--- a/templates/presentationContainer.mustache
+++ b/templates/presentationContainer.mustache
@@ -11,7 +11,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-	<link rel="stylesheet" href="/resources/reveal.js/css/reveal.css">
+	<link rel="stylesheet" href="/resources/css/reveal.css">
 	<link rel="stylesheet" href="/themes/{{theme}}.css" id="theme">
 
 	<!-- Code syntax highlighting -->
@@ -60,7 +60,7 @@
 	</style>
 
 	<!--[if lt IE 9]>
-		<script src="/resources/reveal.js/lib/js/html5shiv.js"></script>
+		<script src="/resources/lib/js/html5shiv.js"></script>
 	<![endif]-->
 
 </head>
@@ -76,8 +76,8 @@
 
 	</div>
 
-	<script src="/resources/reveal.js/lib/js/head.min.js"></script>
-	<script src="/resources/reveal.js/js/reveal.js"></script>
+	<script src="/resources/lib/js/head.min.js"></script>
+	<script src="/resources/js/reveal.js"></script>
 
 	<script>
 		// Full list of configuration options available at:
@@ -93,12 +93,12 @@
 
 			// Optional reveal.js plugins
 			dependencies: [
-				{ src: '/resources/reveal.js/lib/js/classList.js', condition: function () { return !document.body.classList; } },
-				{ src: '/resources/reveal.js/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-				{ src: '/resources/reveal.js/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
-				{ src: '/resources/reveal.js/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
-				{ src: '/resources/reveal.js/plugin/zoom-js/zoom.js', async: true },
-				{ src: '/resources/reveal.js/plugin/notes/notes.js', async: true }
+				{ src: '/resources/lib/js/classList.js', condition: function () { return !document.body.classList; } },
+				{ src: '/resources/plugin/markdown/marked.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+				{ src: '/resources/plugin/markdown/markdown.js', condition: function () { return !!document.querySelector('[data-markdown]'); } },
+				{ src: '/resources/plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } },
+				{ src: '/resources/plugin/zoom-js/zoom.js', async: true },
+				{ src: '/resources/plugin/notes/notes.js', async: true }
 			]
 			});
 	</script>
