Disabled the zoom and defaulted transition to fade

--- a/templates/presentationContainer.mustache
+++ b/templates/presentationContainer.mustache
@@ -88,8 +88,10 @@
 			progress: true,
 			history: true,
 			center: true,
-			zoom: 0.5,
-			transition: 'slide', // none/fade/slide/convex/concave/zoom
+			zoom: 1,
+      minScale: 1,
+      maxScale: 1,
+			transition: 'fade', // none/fade/slide/convex/concave/zoom
 
 			// Optional reveal.js plugins
 			dependencies: [
